added tests for auth controller
